--- a/pages/KVTC/dummyhome.html
+++ b/pages/KVTC/dummyhome.html
@@ -157,7 +157,7 @@
         }
 
         .highlight-text {
-            color: #008000;
+            color: #065f46;
         }
 
         .subtitle {
@@ -199,7 +199,7 @@
         }
 
         .search-btn {
-            background: #018749;
+            background: #065f46;
             color: white;
             border: none;
             border-radius: 0 8px 8px 0;
@@ -478,7 +478,7 @@
         }
 
         .continue-modal-btn:hover:not(:disabled) {
-            background-color: #1e40af;
+            background-color: #2980b9;
         }
 
         .continue-modal-btn:disabled {
