--- a/pages/KVTC/role-selection.html
+++ b/pages/KVTC/role-selection.html
@@ -57,31 +57,25 @@
         }
 
         .role-card {
-            width: 180px;
-            height: 140px;
-            border: 2px solid #e0e0e0;
-            border-radius: 8px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            border: 3px solid transparent;
+            border-radius: 12px;
+            padding: 30px;
+            text-align: center;
             cursor: pointer;
             transition: all 0.3s ease;
             background: white;
-            position: relative;
-            padding: 15px 20px;
-            gap: 10px;
-        }
-
-        .role-card.selected {
-            border-color: #3498db;
-            background-color: #f8fcff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
         }
 
         .role-card:hover {
-            border-color: #3498db;
-            transform: translateY(-2px);
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+            border-color: #1e3a8a;
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+        }
+
+        .role-card.selected {
+            border-color: #1e3a8a;
+            background: rgba(30, 58, 138, 0.05);
         }
 
         .role-card:hover .role-icon {
@@ -89,17 +83,20 @@
         }
 
         .role-card:hover .role-label {
-            color: #3498db;
+            color: #1e3a8a;
         }
 
         .role-icon {
             width: 80px;
             height: 80px;
-            position: relative;
+            margin: 0 auto 20px;
+            background: #f8f9fa;
+            border-radius: 50%;
             display: flex;
-            justify-content: center;
             align-items: center;
-            flex-shrink: 0;
+            justify-content: center;
+            font-size: 32px;
+            color: #1e3a8a;
         }
 
         .persona-image {
@@ -124,7 +121,7 @@
             right: -5px;
             width: 20px;
             height: 20px;
-            background-color: #3498db;
+            background-color: #1e3a8a;
             border-radius: 50%;
             display: none;
         }
@@ -153,25 +150,26 @@
         }
 
         .role-card.selected .role-label {
-            color: #3498db;
+            color: #1e3a8a;
             font-weight: 500;
         }
 
         .continue-btn {
-            background-color: #3498db;
+            background-color: #1e3a8a;
             color: white;
             border: none;
-            padding: 16px 40px;
-            border-radius: 30px;
-            font-size: 18px;
-            font-weight: 500;
+            padding: 15px 40px;
+            border-radius: 8px;
+            font-size: 16px;
+            font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
-            margin-bottom: 30px;
+            opacity: 0.5;
+            pointer-events: none;
         }
 
         .continue-btn:hover {
-            background-color: #2980b9;
+            background-color: #1e3a8a;
             transform: translateY(-1px);
         }
 
@@ -191,7 +189,7 @@
             width: 12px;
             height: 12px;
             border-radius: 50%;
-            background-color: #3498db;
+            background-color: #1e3a8a;
         }
 
         .dot.inactive {
@@ -216,6 +214,148 @@
 
             .role-card {
                 width: 200px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            body {
+                padding: 15px;
+            }
+
+            .container {
+                padding: 30px 20px;
+                margin: 10px;
+                border-radius: 16px;
+            }
+
+            .title {
+                font-size: 28px;
+                margin-bottom: 16px;
+                line-height: 1.3;
+            }
+
+            .subtitle {
+                font-size: 16px;
+                margin-bottom: 35px;
+                max-width: 300px;
+            }
+
+            .role-cards {
+                gap: 16px;
+                margin-bottom: 30px;
+            }
+
+            .role-card {
+                width: 180px;
+                padding: 25px 20px;
+                border-radius: 10px;
+            }
+
+            .role-icon {
+                width: 70px;
+                height: 70px;
+                margin: 0 auto 16px;
+            }
+
+            .png-icon {
+                width: 70px;
+                height: 70px;
+            }
+
+            .role-label {
+                font-size: 20px;
+            }
+
+            .continue-btn {
+                padding: 14px 35px;
+                font-size: 15px;
+                border-radius: 6px;
+            }
+
+            .progress-dots {
+                gap: 8px;
+            }
+
+            .dot {
+                width: 10px;
+                height: 10px;
+            }
+        }
+
+        @media (max-width: 360px) {
+            .container {
+                padding: 25px 15px;
+                margin: 5px;
+            }
+
+            .title {
+                font-size: 24px;
+                margin-bottom: 14px;
+            }
+
+            .subtitle {
+                font-size: 15px;
+                margin-bottom: 30px;
+                max-width: 280px;
+            }
+
+            .role-card {
+                width: 160px;
+                padding: 20px 15px;
+            }
+
+            .role-icon {
+                width: 60px;
+                height: 60px;
+                margin: 0 auto 12px;
+            }
+
+            .png-icon {
+                width: 60px;
+                height: 60px;
+            }
+
+            .role-label {
+                font-size: 18px;
+            }
+
+            .continue-btn {
+                padding: 12px 30px;
+                font-size: 14px;
+            }
+
+            .dot {
+                width: 8px;
+                height: 8px;
+            }
+        }
+
+        /* Landscape orientation adjustments */
+        @media (max-width: 768px) and (orientation: landscape) {
+            .container {
+                padding: 25px 40px;
+                max-width: 600px;
+            }
+
+            .title {
+                font-size: 30px;
+                margin-bottom: 15px;
+            }
+
+            .subtitle {
+                font-size: 16px;
+                margin-bottom: 30px;
+            }
+
+            .role-cards {
+                flex-direction: row;
+                gap: 25px;
+                margin-bottom: 25px;
+            }
+
+            .role-card {
+                width: 160px;
+                padding: 20px;
             }
         }
 
@@ -308,7 +448,7 @@
             roleCards.forEach(card => {
                 card.addEventListener('mouseenter', function() {
                     if (!this.classList.contains('selected')) {
-                        this.style.borderColor = '#3498db';
+                        this.style.borderColor = '#1e3a8a';
                     }
                 });
 
