--- a/pages/KVTC/signup.html
+++ b/pages/KVTC/signup.html
@@ -65,12 +65,12 @@
         }
 
         .form-input:focus {
-            border-color: #f39c12;
+            border-color: #065f46;
         }
 
         .sign-up-btn {
             width: 100%;
-            background-color: #f39c12;
+            background-color: #065f46;
             color: white;
             border: none;
             padding: 14px 24px;
@@ -83,7 +83,7 @@
         }
 
         .sign-up-btn:hover {
-            background-color: #e67e22;
+            background-color: #059669;
         }
 
         .sign-up-btn:disabled {
@@ -103,7 +103,7 @@
         }
 
         .signin-link {
-            color: #f39c12;
+            color: #065f46;
             text-decoration: none;
             font-weight: 600;
         }
@@ -140,6 +140,106 @@
 
             .signup-title {
                 font-size: 28px;
+            }
+        }
+
+        @media (max-width: 414px) {
+            body {
+                padding: 15px;
+            }
+
+            .signup-container {
+                padding: 25px 18px;
+                margin: 5px;
+                border-radius: 8px;
+            }
+
+            .signup-title {
+                font-size: 26px;
+                margin-bottom: 30px;
+            }
+
+            .form-group {
+                margin-bottom: 18px;
+            }
+
+            .form-label {
+                font-size: 15px;
+                margin-bottom: 6px;
+            }
+
+            .form-input {
+                padding: 14px 16px;
+                font-size: 15px;
+                border-radius: 6px;
+            }
+
+            .sign-up-btn {
+                padding: 16px 20px;
+                font-size: 15px;
+                border-radius: 6px;
+                margin-bottom: 18px;
+            }
+
+            .divider {
+                font-size: 15px;
+                margin-bottom: 18px;
+            }
+
+            .signin-text {
+                font-size: 15px;
+            }
+        }
+
+        @media (max-width: 360px) {
+            .signup-container {
+                padding: 20px 15px;
+                margin: 2px;
+            }
+
+            .signup-title {
+                font-size: 24px;
+                margin-bottom: 25px;
+            }
+
+            .form-input {
+                padding: 12px 14px;
+                font-size: 14px;
+            }
+
+            .sign-up-btn {
+                padding: 14px 18px;
+                font-size: 14px;
+            }
+
+            .signin-text,
+            .divider {
+                font-size: 14px;
+            }
+
+            .form-label {
+                font-size: 14px;
+            }
+        }
+
+        /* Landscape orientation adjustments */
+        @media (max-width: 768px) and (orientation: landscape) {
+            body {
+                padding: 10px;
+            }
+
+            .signup-container {
+                max-width: 500px;
+                padding: 25px 30px;
+            }
+
+            .signup-title {
+                font-size: 24px;
+                margin-bottom: 25px;
+            }
+
+            .form-group {
+                margin-bottom: 15px;
             }
         }
     </style>
